add font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 <script src="/javascripts/vendor/d3/topojson.min.js"></script>
 <script src="/javascripts/vendor/d3/cartogram.js"></script>
 <script src="/javascripts/vendor/jscolor/jscolor.min.js"></script>
-
 <script src="/javascripts/vendor/handsontable/handsontable.full.js"></script>
+<script src="/javascripts/app.js"></script>
 <link rel="stylesheet" media="screen" href="/javascripts/vendor/handsontable/handsontable.full.css">
 <link rel="stylesheet" media="screen" href="/stylesheets/vendor/normalize.css">
 <link rel="stylesheet" media="screen" href="/stylesheets/style.css">
+<link rel="stylesheet" media="screen" href="/stylesheets/vendor/font-awesome/font-awesome.min.css">
 <body>
   <article class='clearfix'>
     <section style='float:left;'><svg id='map'></svg></section>
