added download button

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" media="screen" href="/javascripts/vendor/handsontable/handsontable.full.css">
 <link rel="stylesheet" media="screen" href="/stylesheets/vendor/normalize.css">
 <link rel="stylesheet" media="screen" href="/stylesheets/style.css">
-<link rel="stylesheet" media="screen" href="/stylesheets/vendor/font-awesome/font-awesome.min.css">
+<link rel="stylesheet" media="screen" href="/stylesheets/vendor/font-awesome/css/font-awesome.min.css">
 <body>
   <article class='clearfix'>
     <section style='float:left;'><svg id='map'></svg></section>
@@ -19,6 +19,11 @@
         <ul style='list-style:none;'>
           <li style='float:left;'><input id='c0' class='cp'></input></li>
           <li style='float:left;'><input id='c1' class='cp'></input></li>
+        </ul>
+      </div>
+      <div id='buttons' class='clearfix'>
+        <ul style='list-style:none;'>
+          <li style='float:left;'><i id='btn-download' class="fa fa-download fa-3x"></i></li>
         </ul>
       </div>
     </section>
