annihilate padding of ul 	modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <section style='float:left;'>
       <div id='table' class='clearfix'></div>
       <div id='style' class='clearfix'>
-        <ul style='list-style:none;'>
+        <ul style='list-style:none;padding:0;'>
           <li style='float:left;'>最小: <input id='c0' class='cp'></input></li>
           <li style='margin-left:4px;float:left;'>最大: <input id='c1' class='cp'></input></li>
         </ul>
       </div>
       <div id='buttons' class='clearfix'>
-        <ul style='list-style:none;'>
+        <ul style='list-style:none;padding:0;'>
           <li style='float:left;'><a href='#'><i id='btn-download' class="fa fa-download fa-3x"></i></a></li>
         </ul>
       </div>
